@@ -1,5 +1,5 @@
 sinclude(config/axiom.m4)
-AC_INIT([FriCAS], [2009-10-26], 
+AC_INIT([FriCAS], [2010-01-08], 
         [fricas-devel@googlegroups.com])
 
 AC_CONFIG_AUX_DIR(config)
@@ -277,14 +277,14 @@ esac
 
 AC_ARG_WITH([lisp-flavor],
             [  --with-lisp-flavor=F    your Lisp is brand F
-                          where F if one F gcl clisp sbcl cmucl ecl openmcl
+                          where F if one F gcl clisp sbcl cmucl ecl openmcl lispworks
                           should be autodetected],
             [case $withval in
-            gcl|clisp|sbcl|cmucl|ecl|openmcl)
+            gcl|clisp|sbcl|cmucl|ecl|openmcl|lispworks)
                    fricas_lisp_flavor=$withval
                    ;;
             *)
-              AC_MSG_ERROR([--with-lisp-flavor requires one of gcl clisp sbcl cmucl ecl openmcl]);;
+              AC_MSG_ERROR([--with-lisp-flavor requires one of gcl clisp sbcl cmucl ecl openmcl lispworks]);;
             esac])
 if test x"$axiom_include_gcl" != xyes ; then
   AC_MSG_CHECKING([Lisp implementation])
@@ -369,7 +369,7 @@ AC_SUBST(fricas_lisp_flavor)
 
 ## Check if we need shared libspad library.
 case $fricas_lisp_flavor in
-    sbcl|cmucl|clisp|openmcl)
+    sbcl|cmucl|clisp|openmcl|lispworks)
        LIBSPAD_SO_TARGET="libspad_so"
         ;;
     *)
@@ -425,6 +425,10 @@ case $fricas_lisp_flavor in
     openmcl)
        fricas_quiet_flags=
        axiom_eval_flags='--eval'
+       ;;
+    lispworks)
+       fricas_quiet_flags=
+       axiom_eval_flags='-init - -siteinit - -eval'
        ;;
     *) AC_MSG_ERROR([We do not know how to build FriCAS this $fricas_lisp]) ;;
 esac
