@@ -1,5 +1,13 @@
 2010-01-08  Rainer Joswig <joswig@lisp.de>
 
+	* configure.ac, config.lisp, src/scripts/document.in,
+	src/interp/nlib.lisp, src/interp/util.lisp,
+	src/interp/macros.lisp, src/interp/vmlisp.lisp,
+	src/lisp/Makefile.in, src/lisp/fricas-lisp.lisp:
+	Support build with Lispworks.
+
+2010-01-08  Rainer Joswig <joswig@lisp.de>
+
 	* src/lisp/fricas-lisp.lisp: save-core-restart(): Use default
 	location of Closure CL kernel.
 
